# ARIMA

./: CMakeLists.txt
src/: CMakeLists.txt  arima.cpp  arima.h  arima_state_space_armadillo.cpp  arima_state_space_armadillo.h  state_space_arima_eigen.cpp  state_space_arima_eigen.h  state_space_arima_pod.cpp  state_space_arima_pod.h
tests/: CMakeLists.txt  arima_eigen_test.cpp  simple_test.cpp
